# medical-dw-pipeline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  requirements.txt
airflow/dags/: medical_etl_pipeline.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/ads/: drg_analysis.sql  readmission_risk.sql
dbt/models/dwd/: dim_date.sql  dim_diagnosis.sql  dim_organization.sql  dim_patient.sql  dim_provider.sql  fact_diagnosis.sql  fact_encounter.sql  fact_medication.sql
dbt/models/dws/: agg_daily_admissions.sql  agg_department_load.sql  agg_patient_segment.sql
dbt/models/ods/: ods_sources.yml
dbt/tests/: assert_daily_admissions_positive.sql  assert_encounter_cost_non_negative.sql  assert_patient_age_valid.sql
etl/: __init__.py  config.py  extract.py  load.py  pipeline.py  transform.py
scripts/: download_synthea.sh
sql/: init_db.sql
