[project]
name = "medical-dw-pipeline"
version = "0.1.0"
description = "医疗数据仓库 ETL Pipeline — 从 Synthea 合成医疗数据到分层数仓的完整工程化实现"
authors = [
    {name = "Tony", email = "tony@zhujiang-hospital.com"},
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "click>=8.0",
    "python-dateutil>=2.8",
]

[tool.setuptools.packages.find]
include = ["etl*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "pre-commit>=3.0",
    "ipython",
    "jupyter",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
